corrections : responsive version mobile + problème de contrast de couleur du formulaire

--- a/CSS/css_page-photograph/mediaqueries-page-photograph.scss
+++ b/CSS/css_page-photograph/mediaqueries-page-photograph.scss
@@ -1,4 +1,34 @@
 /* mobile */
+@media screen and (min-width: 320px) {
+  #photographContact {
+    > h1 {
+      font-size: 2rem;
+      margin: 30px 15px;
+    }
+    & .info-form {
+      margin: 20px auto;
+      > label {
+        font-size: 1.1rem;
+      }
+      & input {
+        height: 40px;
+        font-size: 1rem;
+      }
+      & textarea {
+        height: 150px;
+        font-size: 1rem;
+      }
+    }
+    & .btn-submit-form {
+      margin: 20px auto;
+    }
+  }
+
+  .btn-submit {
+    height: 50px;
+    font-size: 1rem;
+  }
+}
 
 @media screen and (min-width: 360px) {
   .presentation {
@@ -34,7 +64,7 @@
 
   #photographContact {
     > h1 {
-      font-size: 1.5rem;
+      font-size: 2rem;
     }
     & div {
       & .text-control {
@@ -200,12 +230,10 @@
   #modale {
     & .modal-content {
       height: 755px;
-      background: #db8876;
       width: 555px;
       margin: 60px auto;
       border-radius: 5px;
       padding-bottom: 10px;
-    
     }
   }
 
@@ -378,10 +406,8 @@
   #modale {
     & .modal-content {
       padding-bottom: 1.5em;
-   
-    }  
-  }  
-
+    }
+  }
 }
 
 /* grand écran */
