--- a/CSS/css_page-photograph/page-photograph.scss
+++ b/CSS/css_page-photograph/page-photograph.scss
@@ -51,6 +51,7 @@ main {
   margin: 0 auto 2em;
   > .btn-contact {
     position: fixed;
+    font-weight: bold;
     bottom: 5%;
     left: 50%;
     margin-left: -60px;
@@ -64,6 +65,10 @@ main {
       padding: 5px;
       font-weight: bold;
       width: 100%;
+      &:hover {
+        color: #000;
+        background: #db8876;
+      }
     }
   }
 }
@@ -103,6 +108,7 @@ ul {
       border: 0.3px solid #c4c4c4;
       border-radius: 11px;
       padding: 2px 10px;
+      font-weight: bold;
       font-size: 0.7rem;
       &:hover {
         background-color: $color-primary-bg;
@@ -137,6 +143,7 @@ select {
   height: 50px;
   background: $color-primary-bg;
   color: #fff;
+  font-weight: bold;
   border-radius: 5px;
   padding: 5px 10px;
 }
@@ -160,7 +167,7 @@ select:hover {
     position: relative;
     overflow-y: scroll;
     height: 100%;
-    background: #db8876;
+    background: #da6e56;
     width: 100%;
   }
 }
@@ -233,7 +240,7 @@ select:hover {
   content: attr(data-error);
   font-weight: bold;
   font-size: 0.7rem;
-  color: rgb(158, 3, 3);
+  color: #32050e;
   display: block;
   margin-top: 1px;
   text-align: right;
@@ -260,7 +267,8 @@ select:hover {
   height: 200px;
   border-radius: 5px;
   border-radius: 8px;
-  & img {
+  & img,
+  video {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -304,7 +312,7 @@ select:hover {
   margin: auto;
   display: flex;
   justify-content: space-around;
-  background-color: #db8876;
+  background-color: #da6e56;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   & .fas {
